completed 16 tutorials of material

--- a/angular-material/src/app/app.component.html
+++ b/angular-material/src/app/app.component.html
@@ -1,9 +1,15 @@
-<div style="text-align: center;">
-  <h1>
-    From App Component
-  </h1>
-</div>
+<!-- <button mat-raised-button>Hello</button> -->
 
-<app-test3></app-test3>
-
-
+<!-- <app-learn-typography></app-learn-typography> -->
+<!-- <app-learn-button></app-learn-button> -->
+<!-- <app-learn-button-toggle></app-learn-button-toggle> -->
+<!-- <app-learn-icon></app-learn-icon> -->
+<!-- <app-learn-badges></app-learn-badges> -->
+<!-- <app-learn-progress-spinner></app-learn-progress-spinner> -->
+<!-- <app-learn-toolbar></app-learn-toolbar> -->
+<!-- <app-learn-sidenav></app-learn-sidenav> -->
+<!-- <app-learn-menu></app-learn-menu> -->
+<!-- <app-learn-list></app-learn-list> -->
+<!-- <app-learn-grid-list></app-learn-grid-list> -->
+<!-- <app-learn-expansion-panel></app-learn-expansion-panel> -->
+<app-learn-card></app-learn-card>
