completed anguar material

--- a/angular-material/src/app/app.component.html
+++ b/angular-material/src/app/app.component.html
@@ -12,4 +12,16 @@
 <!-- <app-learn-list></app-learn-list> -->
 <!-- <app-learn-grid-list></app-learn-grid-list> -->
 <!-- <app-learn-expansion-panel></app-learn-expansion-panel> -->
-<app-learn-card></app-learn-card>
+<!-- <app-learn-card></app-learn-card> -->
+<!-- <app-learn-tabs></app-learn-tabs> -->
+<!-- <app-learn-stepper></app-learn-stepper> -->
+<!-- <app-learn-input></app-learn-input> -->
+<!-- <app-learn-select></app-learn-select> -->
+<!-- <app-learn-autocomplete></app-learn-autocomplete> -->
+<!-- <app-learn-checkbox-radio-button></app-learn-checkbox-radio-button> -->
+<!-- <app-learn-datepicker></app-learn-datepicker> -->
+<!-- <app-learn-tooltip></app-learn-tooltip> -->
+<!-- <app-learn-snackbar></app-learn-snackbar> -->
+<!-- <app-learn-dialog></app-learn-dialog> -->
+<!-- <app-learn-table></app-learn-table> -->
+<app-learn-virtual-scrolling></app-learn-virtual-scrolling>
