--- a/angular-material/src/app/app.component.html
+++ b/angular-material/src/app/app.component.html
@@ -23,5 +23,5 @@
 <!-- <app-learn-tooltip></app-learn-tooltip> -->
 <!-- <app-learn-snackbar></app-learn-snackbar> -->
 <!-- <app-learn-dialog></app-learn-dialog> -->
-<!-- <app-learn-table></app-learn-table> -->
-<app-learn-virtual-scrolling></app-learn-virtual-scrolling>
+<app-learn-table></app-learn-table>
+<!-- <app-learn-virtual-scrolling></app-learn-virtual-scrolling> -->
