--- a/project/frontend/src/app/components/navbar/navbar.component.html
+++ b/project/frontend/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,4 @@
 <mat-toolbar color="primary">
-  <!-- <button mat-icon-button aria-label="Menu icon"> -->
-  <!-- <button mat-icon-button aria-label="Menu icon" (click)="toggleMenu()"> -->
   <button mat-icon-button aria-label="Menu icon" (click)="sideNav.toggle()">
     <mat-icon>menu</mat-icon>
   </button>
@@ -8,19 +6,56 @@
 </mat-toolbar>
 
 <mat-sidenav-container autosize>
-  <mat-sidenav #sideNav mode="push" >
-  <!-- <mat-sidenav [mode]="isMobile ? 'over' : 'side'" [opened]="isMobile ? 'false' : 'true'"> -->
-  <!-- <mat-sidenav [ngClass]="!isCollapsed ? 'expanded' : ''" [mode]="isMobile ? 'over' : 'side'" [opened]="isMobile ? 'false' : 'true'"> -->
+  <mat-sidenav #sideNav mode="side" opened="true" >
     <mat-nav-list>
+
+
       <a mat-list-item>
         <span class="entry">
           <mat-icon>house</mat-icon>
-          <span>Dashboard</span>
-          <!-- <span *ngIf="!isCollapsed">Dashboard</span> -->
+          <span>Home</span>
         </span>
       </a>
+
+      <a mat-list-item>
+        <span class="entry">
+          <mat-icon>dashboard</mat-icon>
+          <span>Dashboard</span>
+        </span>
+      </a>
+
+      <a mat-list-item>
+        <span class="entry">
+          <mat-icon>person</mat-icon>
+          <span>Profile</span>
+        </span>
+      </a>
+
+      <a mat-list-item>
+        <span class="entry">
+          <mat-icon>logout</mat-icon>
+          <span>Logout</span>
+        </span>
+      </a>
+
+      <a mat-list-item>
+        <span class="entry">
+          <mat-icon>account_circle</mat-icon>
+          <span>Register</span>
+        </span>
+      </a>
+
+      <a mat-list-item>
+        <span class="entry">
+          <mat-icon>login</mat-icon>
+          <span>Login</span>
+        </span>
+      </a>
+
+
     </mat-nav-list>
   </mat-sidenav>
+
   <mat-sidenav-content>
     <h2>Content</h2>
     <router-outlet></router-outlet>
