--- a/project/frontend/src/app/components/navbar/navbar.component.html
+++ b/project/frontend/src/app/components/navbar/navbar.component.html
@@ -6,46 +6,53 @@
 </mat-toolbar>
 
 <mat-sidenav-container autosize>
-  <mat-sidenav #sideNav mode="side" opened="true" >
+  <mat-sidenav #sideNav mode="side" >
     <mat-nav-list>
 
 
-      <a mat-list-item>
+      <a mat-list-item routerLink="/home" >
         <span class="entry">
           <mat-icon>house</mat-icon>
           <span>Home</span>
         </span>
       </a>
 
-      <a mat-list-item>
+      <a mat-list-item routerLink="/admin" >
+        <span class="entry">
+          <mat-icon>admin_panel_settings</mat-icon>
+          <span>Admin</span>
+        </span>
+      </a>
+
+      <a mat-list-item routerLink="/dashboard" >
         <span class="entry">
           <mat-icon>dashboard</mat-icon>
           <span>Dashboard</span>
         </span>
       </a>
 
-      <a mat-list-item>
+      <a mat-list-item routerLink="/person" >
         <span class="entry">
           <mat-icon>person</mat-icon>
           <span>Profile</span>
         </span>
       </a>
 
-      <a mat-list-item>
+      <a mat-list-item routerLink="/logout" >
         <span class="entry">
           <mat-icon>logout</mat-icon>
           <span>Logout</span>
         </span>
       </a>
 
-      <a mat-list-item>
+      <a mat-list-item routerLink="/account_circle" >
         <span class="entry">
           <mat-icon>account_circle</mat-icon>
           <span>Register</span>
         </span>
       </a>
 
-      <a mat-list-item>
+      <a mat-list-item routerLink="/login" >
         <span class="entry">
           <mat-icon>login</mat-icon>
           <span>Login</span>
@@ -56,8 +63,11 @@
     </mat-nav-list>
   </mat-sidenav>
 
+
+
   <mat-sidenav-content>
     <h2>Content</h2>
     <router-outlet></router-outlet>
+    <!-- <app-footer></app-footer> -->
   </mat-sidenav-content>
 </mat-sidenav-container>
