--- a/project/frontend/src/app/components/navbar/navbar.component.html
+++ b/project/frontend/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
 </mat-toolbar>
 
 <mat-sidenav-container autosize>
-  <mat-sidenav #sideNav mode="side" >
+  <mat-sidenav #sideNav mode="push" >
     <mat-nav-list>
 
 
@@ -18,6 +18,13 @@
           <span class="entry">
             <mat-icon>house</mat-icon>
             <span>Home</span>
+          </span>
+        </a>
+
+        <a mat-list-item routerLink="/events" >
+          <span class="entry">
+            <mat-icon>clock</mat-icon>
+            <span>Events</span>
           </span>
         </a>
 
@@ -43,6 +50,13 @@
           <span class="entry">
             <mat-icon>admin_panel_settings</mat-icon>
             <span>Admin</span>
+          </span>
+        </a>
+
+        <a mat-list-item routerLink="/events" >
+          <span class="entry">
+            <mat-icon>clock</mat-icon>
+            <span>Events</span>
           </span>
         </a>
 
@@ -72,6 +86,13 @@
           </span>
         </a>
 
+        <a mat-list-item routerLink="/events" >
+          <span class="entry">
+            <mat-icon>clock</mat-icon>
+            <span>Events</span>
+          </span>
+        </a>
+
         <a mat-list-item routerLink="/register" >
           <span class="entry">
             <mat-icon>account_circle</mat-icon>
@@ -96,8 +117,9 @@
 
 
   <mat-sidenav-content>
-    <!-- <h2>Content</h2> -->
-    <router-outlet></router-outlet>
-    <!-- <app-footer></app-footer> -->
+    <div class="internal-margin">
+      <router-outlet></router-outlet>
+    </div>
+      <!-- <app-footer></app-footer> -->
   </mat-sidenav-content>
 </mat-sidenav-container>
