added few more empty templates

--- a/project/frontend/src/app/components/navbar/navbar.component.html
+++ b/project/frontend/src/app/components/navbar/navbar.component.html
@@ -23,7 +23,7 @@
 
         <a mat-list-item routerLink="/events" >
           <span class="entry">
-            <mat-icon>clock</mat-icon>
+            <mat-icon>theater_comedy</mat-icon>
             <span>Events</span>
           </span>
         </a>
@@ -55,7 +55,7 @@
 
         <a mat-list-item routerLink="/events" >
           <span class="entry">
-            <mat-icon>clock</mat-icon>
+            <mat-icon>theater_comedy</mat-icon>
             <span>Events</span>
           </span>
         </a>
@@ -88,7 +88,7 @@
 
         <a mat-list-item routerLink="/events" >
           <span class="entry">
-            <mat-icon>clock</mat-icon>
+            <mat-icon>theater_comedy</mat-icon>
             <span>Events</span>
           </span>
         </a>
