--- a/project/frontend/src/app/pages/all-events/all-events.component.html
+++ b/project/frontend/src/app/pages/all-events/all-events.component.html
@@ -1,24 +1,41 @@
 
-Price Range
-<mat-slider min="200" max="500">
-  <input value="300" matSliderStartThumb>
-  <input value="400" matSliderEndThumb>
-</mat-slider>
+<mat-form-field class="example-form-field">
+  <mat-label>Search By Title, Category, Description, Location</mat-label>
+  <input matInput type="text" [(ngModel)]="value">
+  @if (value) {
+    <button matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+      <mat-icon>close</mat-icon>
+    </button>
+  }
+</mat-form-field>
 
 <h4>mat-select</h4>
 <mat-form-field>
   <mat-label>Choose an option</mat-label>
   <mat-select [disabled]="false">
-    <mat-option value="option1">Option 1</mat-option>
-    <mat-option value="option2" disabled>Option 2 (disabled)</mat-option>
-    <mat-option value="option3">Option 3</mat-option>
+    <mat-option value="upcoming">upcoming</mat-option>
+    <mat-option value="ongoing">ongoing</mat-option>
+    <mat-option value="past">past</mat-option>
   </mat-select>
 </mat-form-field>
 <br>
 
+Price Range
+<mat-slider min="100" max="2000" step="50">
+  <input value="300" matSliderStartThumb>
+  <input value="400" matSliderEndThumb>
+</mat-slider>
+
 <div class="12hr-example">
-  <input placeholder="12hr format (default settings)" aria-label="12hr format" [ngxTimepicker]="default" readonly>
-  <ngx-material-timepicker #default></ngx-material-timepicker>
+  Start time:
+  <input placeholder="12hr format (default settings)" aria-label="12hr format" [ngxTimepicker]="default1" readonly>
+  <ngx-material-timepicker #default1></ngx-material-timepicker>
+</div>
+
+<div class="12hr-example">
+  End time:
+  <input placeholder="12hr format (default settings)" aria-label="12hr format" [ngxTimepicker]="default2" readonly>
+  <ngx-material-timepicker #default2></ngx-material-timepicker>
 </div>
 <br>
 
