--- a/project/frontend/src/app/pages/organization/organization.component.html
+++ b/project/frontend/src/app/pages/organization/organization.component.html
@@ -1,1 +1,18 @@
-<p>organization works!</p>
+<mat-paginator #paginator
+              class="demo-paginator"
+              (page)="handlePageEvent($event)"
+              [length]="length"
+              [pageSize]="pageSize"
+              [disabled]="disabled"
+              [showFirstLastButtons]="showFirstLastButtons"
+              [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+              [hidePageSize]="hidePageSize"
+              [pageIndex]="pageIndex"
+              aria-label="Select page">
+</mat-paginator>
+
+
+<!-- <div fxLayout="row wrap" fxLayoutAlign="space-around center"*ngIf="organizations$ | async as organizations; else loading"> -->
+<div fxLayout="row wrap" fxLayoutAlign="space-around center">
+    <!-- <app-organization-card *ngFor="let organization of organizations" [organization]="organization"></app-organization-card> -->
+</div>
