--- a/project/frontend/src/app/components/navbar/navbar.component.html
+++ b/project/frontend/src/app/components/navbar/navbar.component.html
@@ -61,7 +61,7 @@
         <a mat-list-item routerLink="/admin" >
           <span class="entry">
             <mat-icon>admin_panel_settings</mat-icon>
-            <span>Admin</span>
+            <span>Dashboard</span>
           </span>
         </a>
 
