--- a/project/frontend/src/app/components/event-card/event-card.component.html
+++ b/project/frontend/src/app/components/event-card/event-card.component.html
@@ -6,12 +6,11 @@
   </mat-card-header>
   <img mat-card-image  src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
   <mat-card-content>
-    <p>
+    <p style="margin-top: 10px;">
       The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
+    <button mat-button>Show Details</button>
   </mat-card-actions>
 </mat-card>
