--- a/project/frontend/src/app/pages/all-events/all-events.component.html
+++ b/project/frontend/src/app/pages/all-events/all-events.component.html
@@ -1,4 +1,4 @@
-
+<!--
 <mat-form-field class="example-form-field">
   <mat-label>Search By Title, Category, Description, Location</mat-label>
   <input matInput type="text" [(ngModel)]="value">
@@ -71,7 +71,109 @@ Price Range
               [hidePageSize]="hidePageSize"
               [pageIndex]="pageIndex"
               aria-label="Select page">
-</mat-paginator>
+</mat-paginator> -->
+<!--
+<div fxLayout="column" fxLayoutAlign="start center" >
+
+  <div fxLayout="row" fxLayoutAlign="start center" >
+    <mat-form-field class="example-form-field">
+      <mat-label>Search By Title, Category, Description, Location</mat-label>
+      <input matInput type="text" [(ngModel)]="value">
+      <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-form-field>
+
+
+    <h4>Filter by Status</h4>
+    <mat-form-field>
+      <mat-label>Choose an option</mat-label>
+      <mat-select [(value)]="selectedStatus">
+        <mat-option value="upcoming">Upcoming</mat-option>
+        <mat-option value="ongoing">Ongoing</mat-option>
+        <mat-option value="past">Past</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+
+
+
+  <div fxlayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="20px">
+
+
+  <h4>Price Range</h4>
+  <mat-slider min="100" max="2000" step="50">
+    <input value="300" matSliderStartThumb>
+    <input value="400" matSliderEndThumb>
+  </mat-slider>
+
+  <div fxLayout="row" fxLayoutGap="20px">
+    <div class="12hr-example" fxFlex="50%">
+      <h4>Start time:</h4>
+      <input placeholder="12hr format (default settings)" aria-label="12hr format" [ngxTimepicker]="default1" readonly>
+      <ngx-material-timepicker #default1></ngx-material-timepicker>
+    </div>
+
+    <div class="12hr-example" fxFlex="50%">
+      <h4>End time:</h4>
+      <input placeholder="12hr format (default settings)" aria-label="12hr format" [ngxTimepicker]="default2" readonly>
+      <ngx-material-timepicker #default2></ngx-material-timepicker>
+    </div>
+  </div>
+
+  <h4>Enter a Date Range</h4>
+  <mat-form-field>
+    <mat-label>Enter a date range</mat-label>
+    <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+      <input matStartDate formControlName="start" placeholder="Start date">
+      <input matEndDate formControlName="end" placeholder="End date">
+    </mat-date-range-input>
+    <mat-hint>MM/DD/YYYY - MM/DD/YYYY</mat-hint>
+    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-date-range-picker #picker></mat-date-range-picker>
+
+    <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+    <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+  </mat-form-field>
+
+  <mat-paginator #paginator
+                class="demo-paginator"
+                (page)="handlePageEvent($event)"
+                [length]="length"
+                [pageSize]="pageSize"
+                [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+                [showFirstLastButtons]="showFirstLastButtons"
+                aria-label="Select page">
+  </mat-paginator>
+
+
+  </div>
+
+</div> -->
+
+<div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class="search-filter-container" fxLayout.xs="column">
+
+  <mat-form-field class="search-field" fxFlex="40%">
+    <mat-label>Search By Title, Category, Description, Location</mat-label>
+    <input matInput type="text" [(ngModel)]="searchValue">
+    <button *ngIf="searchValue" matSuffix mat-icon-button aria-label="Clear" (click)="searchValue=''">
+      <mat-icon>close</mat-icon>
+    </button>
+  </mat-form-field>
+
+  <button mat-raised-button color="primary" (click)="openFilterDialog()" fxFlex="20%">
+    Open More Filters
+  </button>
+
+  <button mat-raised-button color="primary" (click)="search()" fxFlex="20%">
+    Search
+  </button>
+</div>
+
+
+
+
+
 
 <div fxLayout="row wrap" fxLayoutAlign="space-around center" >
 
@@ -96,6 +198,19 @@ Price Range
   <app-event-card></app-event-card>
 
   <app-event-card></app-event-card>
+
+  <mat-paginator #paginator
+  class="demo-paginator"
+  (page)="handlePageEvent($event)"
+  [length]="length"
+  [pageSize]="pageSize"
+  [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+  [showFirstLastButtons]="showFirstLastButtons"
+  [hidePageSize]="hidePageSize"
+  [pageIndex]="pageIndex"
+  aria-label="Select page"
+  fxFlex="40%">
+</mat-paginator>
 
 </div>
 
