added few more templated

--- a/project/frontend/src/app/components/event-card/event-card.component.html
+++ b/project/frontend/src/app/components/event-card/event-card.component.html
@@ -11,6 +11,6 @@
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>Show Details</button>
+    <button mat-button (click)="showDetails()">Show Details</button>
   </mat-card-actions>
 </mat-card>
