--- a/project/frontend/src/app/pages/organization-detail/organization-detail.component.html
+++ b/project/frontend/src/app/pages/organization-detail/organization-detail.component.html
@@ -1,1 +1,69 @@
-<p>organization-detail works!</p>
+<!--
+<div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class="search-filter-container" fxLayout.xs="column">
+
+  <mat-form-field class="search-field" fxFlex="40%">
+    <mat-label>Search By Title, Category, Description, Location</mat-label>
+    <input matInput type="text" [(ngModel)]="searchValue">
+    <button *ngIf="searchValue" matSuffix mat-icon-button aria-label="Clear" (click)="searchValue=''">
+      <mat-icon>close</mat-icon>
+    </button>
+  </mat-form-field>
+
+  <button mat-raised-button color="primary" (click)="openFilterDialog()" fxFlex="20%">
+    Open More Filters
+  </button>
+
+  <button mat-raised-button color="primary" (click)="search()" fxFlex="20%">
+    Search
+  </button>
+</div>
+
+
+
+
+
+
+<div fxLayout="row wrap" fxLayoutAlign="space-around center" >
+
+  <app-event-card></app-event-card>
+
+  <app-event-card></app-event-card>
+
+  <app-event-card></app-event-card>
+
+  <app-event-card></app-event-card>
+
+  <app-event-card></app-event-card>
+
+  <app-event-card></app-event-card>
+
+  <app-event-card></app-event-card>
+
+  <app-event-card></app-event-card>
+
+  <app-event-card></app-event-card>
+
+  <app-event-card></app-event-card>
+
+  <app-event-card></app-event-card>
+
+  <mat-paginator #paginator
+    class="demo-paginator"
+    (page)="handlePageEvent($event)"
+    [length]="length"
+    [pageSize]="pageSize"
+    [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+    [showFirstLastButtons]="showFirstLastButtons"
+    [hidePageSize]="hidePageSize"
+    [pageIndex]="pageIndex"
+    aria-label="Select page"
+    fxFlex="40%">
+  </mat-paginator>
+</div>
+
+
+<h1>hi</h1>
+ -->
+
+
+<app-all-events></app-all-events>
