--- a/project/frontend/src/app/pages/event-details/event-details.component.html
+++ b/project/frontend/src/app/pages/event-details/event-details.component.html
@@ -1,1 +1,183 @@
-<p>event-details works!</p>
+<!-- <mat-card *ngIf="event">
+  <mat-card-header>
+    <mat-card-title>{{ event.title }}</mat-card-title>
+    <mat-card-subtitle>{{ event.date | date }}</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image [src]="event.media[0]" alt="Event image">
+  <mat-card-content>
+    <p>{{ event.description }}</p>
+    <p><strong>Location:</strong> {{ event.location }}</p>
+    <p><strong>Start Time:</strong> {{ event.startTime }}</p>
+    <p><strong>End Time:</strong> {{ event.endTime }}</p>
+    <p><strong>Category:</strong> {{ event.category }}</p>
+    <p><strong>Capacity:</strong> {{ event.capacity }}</p>
+    <p><strong>Ticket Price:</strong> ${{ event.ticketPrice }}</p>
+    <p><strong>Status:</strong> {{ event.status }}</p>
+    <div *ngIf="event.organizer">
+      <p><strong>Organizer:</strong> {{ event.organizer.name }}</p>
+    </div>
+  </mat-card-content>
+</mat-card> -->
+
+
+<!-- <mat-card class="event-details-card">
+  <mat-card-header>
+    <mat-card-title>{{ event.title }}</mat-card-title>
+    <mat-card-subtitle>
+      {{ event.category }} - {{ event.location }}
+    </mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image [src]="event.media[0]" alt="Event image">
+  <mat-card-content>
+    <p>{{ event.description }}</p>
+    <p><strong>Date:</strong> {{ event.date | date }}</p>
+    <p><strong>Time:</strong> {{ event.startTime }} - {{ event.endTime }}</p>
+    <p><strong>Organizer:</strong> {{ event.organizer.name }}</p>
+    <p><strong>Capacity:</strong> {{ event.capacity }}</p>
+    <p><strong>Ticket Price:</strong> ${{ event.ticketPrice }}</p>
+    <h4>Reviews:</h4>
+    <mat-list>
+      <mat-list-item *ngFor="let review of event.reviews">
+        <img matListAvatar [src]="review.user.avatar" style="height: 100px; width: 100px;" alt="User avatar">
+        <h4 matLine>{{ review.user.name }}</h4>
+        <p matLine>Rating: {{ review.rating }} - {{ review.comment }}</p>
+      </mat-list-item>
+    </mat-list>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button *ngIf="isAdmin()" (click)="editEvent()">Edit</button>
+    <button mat-button (click)="buyTicket()">Buy Ticket</button>
+  </mat-card-actions>
+</mat-card> -->
+
+
+<div fxLayout="row wrap" fxLayoutAlign="space-around">
+
+  <div fxFlex="80%">
+    <mat-card class="event-details-card">
+      <mat-card-header fxLayout="row wrap" fxLayoutAlign="space-between center">
+        <mat-card-title>{{ event.title }}</mat-card-title>
+        <mat-card-subtitle>
+          {{ event.category }} - {{ event.location }}
+        </mat-card-subtitle>
+        <mat-card-actions>
+          <button mat-button *ngIf="isAdmin()" (click)="editEvent()">Edit</button>
+          <button mat-button (click)="buyTicket()">Buy Ticket</button>
+        </mat-card-actions>
+      </mat-card-header>
+      <img mat-card-image [src]="event.media[0]" alt="Event image">
+      <mat-card-content>
+        <div fxLayout="row wrap" fxLayoutAlign="space-around" style="margin: 10px;">
+          <p><strong>Date:</strong> {{ event.date | date }}</p>
+          <p><strong>Time:</strong> {{ event.startTime }} - {{ event.endTime }}</p>
+          <p><strong>Organizer:</strong> {{ event.organizer.name }}</p>
+          <p><strong>Capacity:</strong> {{ event.capacity }}</p>
+          <p><strong>Ticket Price:</strong> ${{ event.ticketPrice }}</p>
+        </div>
+
+        <p>{{ event.description }}</p>
+      </mat-card-content>
+    </mat-card>
+
+    <div>
+      <!-- <mat-list>
+        <mat-list-item *ngFor="let review of event.reviews">
+          <div fxLayout="row" fxLayoutAlign="start center" style="height: fit-content;">
+            <img matListAvatar [src]="review.user.avatar" style="height: 50px; width: 50px;" alt="User avatar">
+            <div>
+              <h4 matLine>{{ review.user.name }}</h4>
+              <p matLine>Rating: {{ review.rating }} - {{ review.comment }}</p>
+            </div>
+          </div>
+        </mat-list-item>
+      </mat-list> -->
+      <!-- <mat-list>
+        <mat-list-item *ngFor="let review of event.reviews">
+          <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px" style="height: fit-content; align-items: center;">
+            <img matListAvatar [src]="review.user.avatar" style="height: 50px; width: 50px;" alt="User avatar">
+            <div>
+              <h4 matLine>{{ review.user.name }}</h4>
+              <p matLine>Rating: {{ review.rating }} - {{ review.comment }}</p>
+            </div>
+          </div>
+        </mat-list-item>
+      </mat-list> -->
+
+      <!-- <app-generic-pagination
+        [items]="items"
+        [template]="itemTemplate"
+        [pageSizeOptions]="[5, 10, 20]"
+        [pageSize]="pageSize"
+        [length]="length"
+        (pageChange)="handlePageChange($event)"
+      >
+      </app-generic-pagination> -->
+
+
+      <!-- <ng-template #itemTemplate let-item>
+        <mat-card class="example-card">
+          <mat-card-header>
+            <mat-card-title>{{ item.title }}</mat-card-title>
+            <mat-card-subtitle>{{ item.subtitle }}</mat-card-subtitle>
+          </mat-card-header>
+          <mat-card-content>
+            <p>{{ item.content }}</p>
+          </mat-card-content>
+        </mat-card>
+      </ng-template> -->
+
+
+      <mat-card class="reviews-card" style="padding: 10px;">
+        <mat-card-title>Reviews</mat-card-title>
+        <div *ngFor="let review of event.reviews" class="review-item" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px" style="height: fit-content; align-items: center;">
+          <img [src]="review.user.avatar" style="height: 50px; width: 50px; border-radius: 50%;" alt="User avatar">
+          <div>
+            <h4>{{ review.user.name }}</h4>
+            <p>
+              Rating:
+              <ng-container *ngFor="let star of getStars(review.rating)">
+                <mat-icon>{{ star }}</mat-icon>
+              </ng-container>
+              - {{ review.comment }}
+            </p>
+          </div>
+        </div>
+
+      </mat-card>
+
+
+
+      <!-- <mat-card class="reviews-card" style="padding: 10px;">
+        <mat-card-title>Reviews</mat-card-title>
+        <div *ngFor="let review of event.reviews" class="review-item" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px" style="height: fit-content; align-items: center;">
+          <img [src]="review.user.avatar" style="height: 50px; width: 50px; border-radius: 50%;" alt="User avatar">
+          <div>
+            <h4>{{ review.user.name }}</h4>
+            <p>
+              Rating:
+              <ng-container *ngFor="let star of getStars(review.rating)">
+                <mat-icon>{{ star }}</mat-icon>
+              </ng-container>
+              - {{ review.comment }}
+            </p>
+          </div>
+        </div>
+      </mat-card> -->
+
+    </div>
+  </div>
+
+
+
+  <div fxFlex="20%">
+    <h3>
+      Top Events By the Organizer
+    </h3>
+    <app-event-card></app-event-card>
+    <app-event-card></app-event-card>
+    <app-event-card></app-event-card>
+    <app-event-card></app-event-card>
+    <app-event-card></app-event-card>
+  </div>
+</div>
+
