--- a/project/frontend/src/app/pages/event-details/event-details.component.html
+++ b/project/frontend/src/app/pages/event-details/event-details.component.html
@@ -143,6 +143,19 @@
           </div>
         </div>
 
+        <mat-paginator #paginator
+            class="demo-paginator"
+            (page)="handlePageEvent($event)"
+            [length]="length"
+            [pageSize]="pageSize"
+            [disabled]="disabled"
+            [showFirstLastButtons]="showFirstLastButtons"
+            [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+            [hidePageSize]="hidePageSize"
+            [pageIndex]="pageIndex"
+            aria-label="Select page">
+        </mat-paginator>
+
       </mat-card>
 
 
@@ -165,6 +178,84 @@
       </mat-card> -->
 
     </div>
+
+
+      <!-- <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+
+        <div fxLayout="column">
+          <div fxLayout="row">
+            <button mat-icon-button [color]="color" *ngFor="let ratingId of ratingArr;index as i" [id]="'star_'+i" (click)="onClick(i+1)" [matTooltip]="ratingId+1" matTooltipPosition="above">
+              <mat-icon>
+                {{showIcon(i)}}
+              </mat-icon>
+            </button>
+          </div>
+          <mat-form-field class="example-full-width">
+            <mat-label>Comments</mat-label>
+            <textarea matInput placeholder="Write your comments" [(ngModel)]="comments"></textarea>
+          </mat-form-field>
+        </div>
+
+        <button mat-raised-button color="primary" (click)="submitReview()">Submit</button>
+      </div> -->
+
+
+      <!-- <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+
+        <div fxLayout="column">
+          <div fxLayout="row">
+            <button mat-icon-button
+                    *ngFor="let ratingId of ratingArr; index as i"
+                    [id]="'star_' + i"
+                    (click)="onClick(i + 1)"
+                    [matTooltip]="ratingId + 1"
+                    matTooltipPosition="above"
+                    [color]="color">
+              <mat-icon>{{ showIcon(i) }}</mat-icon>
+            </button>
+          </div>
+
+          <mat-form-field style="width: 100%;">
+            <mat-label>Comments</mat-label>
+            <textarea matInput placeholder="Write your comments" [(ngModel)]="comments"></textarea>
+          </mat-form-field>
+        </div>
+
+      </div>
+      <button mat-raised-button color="primary" (click)="submitReview()">Submit Review</button> -->
+
+
+      <mat-card style="margin: 20px 0px;">
+        <mat-card-content>
+          <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+
+            <div fxLayout="row">
+              <button mat-icon-button
+                      *ngFor="let ratingId of ratingArr; index as i"
+                      [id]="'star_' + i"
+                      (click)="onClick(i + 1)"
+                      [matTooltip]="ratingId + 1"
+                      matTooltipPosition="above"
+                      [color]="color">
+                <mat-icon>{{ showIcon(i) }}</mat-icon>
+              </button>
+            </div>
+            <mat-form-field style="width: 100%;">
+              <mat-label>Comments</mat-label>
+              <input matInput placeholder="Write your comments" [(ngModel)]="comments" >
+            </mat-form-field>
+
+          </div>
+        </mat-card-content>
+
+        <mat-card-actions fxLayout="row" fxLayoutAlign="end">
+          <button mat-raised-button color="primary" (click)="submitReview()">Submit Review</button>
+        </mat-card-actions>
+      </mat-card>
+
+
+
+
   </div>
 
 
