--- a/project/frontend/src/app/components/events-list/events-list.component.html
+++ b/project/frontend/src/app/components/events-list/events-list.component.html
@@ -14,7 +14,7 @@
 <p>events-list works!</p> -->
 
 
-
+<!--
 <app-generic-pagination
   [items]="items"
   [template]="itemTemplate"
@@ -27,7 +27,6 @@
 
 
 <ng-template #itemTemplate let-item>
-  <!-- Custom item rendering -->
   <mat-card class="example-card">
     <mat-card-header>
       <mat-card-title>{{ item.title }}</mat-card-title>
@@ -37,4 +36,6 @@
       <p>{{ item.content }}</p>
     </mat-card-content>
   </mat-card>
-</ng-template>
+</ng-template> -->
+
+<app-all-events></app-all-events>
