--- a/project/frontend/src/app/pages/admin-created-events/admin-created-events.component.html
+++ b/project/frontend/src/app/pages/admin-created-events/admin-created-events.component.html
@@ -1,3 +1,5 @@
 <button mat-button [routerLink]="['/admin/events/new']">Create Event</button>
 
-<app-events-list></app-events-list>
+<!-- <app-events-list></app-events-list> -->
+
+<app-all-events></app-all-events>
