--- a/project/frontend/src/app/pages/create-update-event/create-update-event.component.html
+++ b/project/frontend/src/app/pages/create-update-event/create-update-event.component.html
@@ -1,1 +1,102 @@
-<p>create-update-event works!</p>
+<!-- <form class="wrapper">
+  <mat-form-field class="example-full-width">
+    <mat-label>Company (disabled)</mat-label>
+    <input matInput disabled value="Google">
+  </mat-form-field>
+
+  <table class="example-full-width" cellspacing="0"><tr>
+    <td><mat-form-field class="example-full-width">
+      <mat-label>First name</mat-label>
+      <input matInput>
+    </mat-form-field></td>
+    <td><mat-form-field class="example-full-width">
+      <mat-label>Long Last Name That Will Be Truncated</mat-label>
+      <input matInput>
+    </mat-form-field></td>
+  </tr></table>
+
+  <p>
+    <mat-form-field class="example-full-width">
+      <mat-label>Address</mat-label>
+      <textarea matInput placeholder="Ex. 100 Main St">1600 Amphitheatre Pkwy</textarea>
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+      <mat-label>Address 2</mat-label>
+      <textarea matInput></textarea>
+    </mat-form-field>
+  </p>
+
+  <table class="example-full-width" cellspacing="0"><tr>
+    <td><mat-form-field class="example-full-width">
+      <mat-label>City</mat-label>
+      <input matInput placeholder="Ex. San Francisco">
+    </mat-form-field></td>
+    <td><mat-form-field class="example-full-width">
+      <mat-label>State</mat-label>
+      <input matInput placeholder="Ex. California">
+    </mat-form-field></td>
+    <td><mat-form-field class="example-full-width">
+      <mat-label>Postal Code</mat-label>
+      <input matInput #postalCode maxlength="5" placeholder="Ex. 94105" value="94043">
+      <mat-hint align="end">{{postalCode.value.length}} / 5</mat-hint>
+    </mat-form-field></td>
+  </tr></table>
+</form> -->
+
+
+
+<form [formGroup]="eventForm" (ngSubmit)="onSubmit()">
+  <mat-form-field>
+    <mat-label>Title</mat-label>
+    <input matInput formControlName="title">
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Description</mat-label>
+    <textarea matInput formControlName="description" rows="5"></textarea>
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Date</mat-label>
+    <input matInput [matDatepicker]="picker" formControlName="date">
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
+
+  <div fxLayout="row" fxLayoutGap="10px">
+    <mat-form-field>
+      <mat-label>Start Time</mat-label>
+      <input matInput formControlName="startTime">
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>End Time</mat-label>
+      <input matInput formControlName="endTime">
+    </mat-form-field>
+  </div>
+
+  <mat-form-field>
+    <mat-label>Location</mat-label>
+    <input matInput formControlName="location">
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Capacity</mat-label>
+    <input matInput type="number" formControlName="capacity">
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Category</mat-label>
+    <input matInput formControlName="category">
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Ticket Price</mat-label>
+    <input matInput type="number" formControlName="ticketPrice">
+  </mat-form-field>
+
+  <!-- Assuming status and media fields are multiselect dropdowns or checkboxes -->
+  <!-- Implement as per your requirement -->
+
+  <button mat-raised-button color="primary" type="submit">Submit</button>
+</form>
