--- a/project/frontend/src/app/components/filter-dialog/filter-dialog.component.html
+++ b/project/frontend/src/app/components/filter-dialog/filter-dialog.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Filter Events</h2>
 <mat-dialog-content>
-  <div fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="20px">
+  <div fxLayout="column" fxLayoutAlign="start center" >
     <mat-form-field>
       <mat-label>Filter by Status</mat-label>
       <mat-select [(value)]="selectedStatus">
